# classic-battler

./: .gitignore  Makefile  main.py  pyproject.toml
backend/: Makefile  pyproject.toml
backend/data/: mop_battle_pet_abilities.csv  mop_battle_pets.csv  mop_battle_pets_test.csv
backend/scripts/: data_extracter.py
backend/src/app/: __init__.py  battler_app.py  main.py
backend/src/core/: models.py  pet_manager.py  pet_type_chart.py  semantic_search.py
backend/src/repository/: mongo_db.py  pet_data_handler.py  redis_cache.py
backend/src/repository/interface/: database.py
backend/src/utils/: timing.py
backend/tests/: app_test.py
core/: models.py  pet_manager.py  pet_type_chart.py
data/: mop_battle_pet_abilities.csv
frontend/classic-battler-frontend/: index.html  package-lock.json  package.json
frontend/classic-battler-frontend/src/: App.tsx
repository/: data_extracter.py  mongo_db.py
repository/interface/: database.py
scripts/: data_extracter.py  testoutput.csv
src/app/: __init__.py  battler_app.py  main.py
src/core/: models.py  pet_manager.py
src/repository/: mongo_db.py
tests/: app_test.py
