[project]
name = "classic-battler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "motor>=3.7.1",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
