[project]
name = "classic-battler"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.14",
    "motor>=3.7.1",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "pydantic>=2.11.7",
    "pyright>=1.1.402",
    "redis>=6.2.0",
    "sentence-transformers>=5.0.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
      packages = ["src"]
